--- a/Roller/imgui.ini
+++ b/Roller/imgui.ini
@@ -4,8 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-ViewportPos=1246,747
-ViewportId=0xEBE6C6E6
+Pos=366,167
 Size=191,49
 Collapsed=0
 
