can set fatdata dir from imgui

--- a/WhipLib/WhipLib.vcxproj
+++ b/WhipLib/WhipLib.vcxproj
@@ -269,6 +269,7 @@ exit 1</Command>
     <ClInclude Include="NoclipComponent.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="SceneManager.h" />
     <ClInclude Include="ShapeComponent.h" />
     <ClInclude Include="ShapeFactory.h" />
     <ClInclude Include="CarPlans\AutoPlans.h" />
@@ -330,6 +331,7 @@ exit 1</Command>
     <ClCompile Include="NoclipComponent.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="ShapeComponent.cpp" />
     <ClCompile Include="ShapeFactory.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
