--- a/TrackEditor/TrackEditor.vcxproj
+++ b/TrackEditor/TrackEditor.vcxproj
@@ -183,6 +183,7 @@ exit 1</Command>
     <ClCompile Include="EditSignWidget.cpp" />
     <ClCompile Include="EditStuntWidget.cpp" />
     <ClCompile Include="EditSurfaceDialog.cpp" />
+    <ClCompile Include="ExportWizard.cpp" />
     <ClCompile Include="GlobalTrackSettings.cpp" />
     <ClCompile Include="moc\moc_AssignBacksDialog.cpp" />
     <ClCompile Include="moc\moc_BackWidget.cpp" />
@@ -193,6 +194,7 @@ exit 1</Command>
     <ClCompile Include="moc\moc_EditGeometryWidget.cpp" />
     <ClCompile Include="moc\moc_EditSignWidget.cpp" />
     <ClCompile Include="moc\moc_EditStuntWidget.cpp" />
+    <ClCompile Include="moc\moc_ExportWizard.cpp" />
     <ClCompile Include="moc\moc_GlobalTrackSettings.cpp" />
     <ClCompile Include="moc\moc_NewTrackDialog.cpp" />
     <ClCompile Include="moc\moc_PreferencesDialog.cpp" />
@@ -388,6 +390,16 @@ exit 1</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\external\Qt5\bin\moc.exe;%(AdditionalInputs)</AdditionalInputs>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\external\Qt5\bin\moc.exe;%(AdditionalInputs)</AdditionalInputs>
     </CustomBuild>
+    <CustomBuild Include="ExportWizard.h">
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\external\Qt5\bin\moc.exe "%(Filename).h" -o "moc\moc_%(Filename).cpp" -b "..\TrackEditor.h"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\external\Qt5\bin\moc.exe "%(Filename).h" -o "moc\moc_%(Filename).cpp" -b "..\TrackEditor.h"</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">MOC'ing %(Filename).h...</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">MOC'ing %(Filename).h...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">moc\moc_%(Filename).cpp;%(Outputs)</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">moc\moc_%(Filename).cpp;%(Outputs)</Outputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\external\Qt5\bin\moc.exe;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\external\Qt5\bin\moc.exe;%(AdditionalInputs)</AdditionalInputs>
+    </CustomBuild>
     <ClInclude Include="QtHelpers.h" />
     <ClInclude Include="ui\ui_AssignBacksDialog.h" />
     <ClInclude Include="ui\ui_BackWidget.h" />
@@ -399,6 +411,7 @@ exit 1</Command>
     <ClInclude Include="ui\ui_EditStuntWidget.h" />
     <ClInclude Include="ui\ui_EditSurfaceDialog.h" />
     <ClInclude Include="ui\ui_EditSeriesDialog.h" />
+    <ClInclude Include="ui\ui_ExportWizard.h" />
     <ClInclude Include="ui\ui_GlobalTrackSettings.h" />
     <ClInclude Include="ui\ui_NewTrackDialog.h" />
     <ClInclude Include="ui\ui_PreferencesDialog.h" />
@@ -604,6 +617,17 @@ exit 1</Command>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(RootDir)%(Directory)ui\ui_%(Filename).h;%(Outputs)</Outputs>
     </CustomBuild>
     <CustomBuild Include="BackWidget.ui">
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\external\Qt5\bin\uic.exe "%(FullPath)" -o "%(RootDir)%(Directory)ui\ui_%(Filename).h"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\external\Qt5\bin\uic.exe "%(FullPath)" -o "%(RootDir)%(Directory)ui\ui_%(Filename).h"</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">UIC'ing %(Filename).ui...</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">UIC'ing %(Filename).ui...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(RootDir)%(Directory)ui\ui_%(Filename).h;%(Outputs)</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(RootDir)%(Directory)ui\ui_%(Filename).h;%(Outputs)</Outputs>
+    </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="ExportWizard.ui">
       <FileType>Document</FileType>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\external\Qt5\bin\uic.exe "%(FullPath)" -o "%(RootDir)%(Directory)ui\ui_%(Filename).h"</Command>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\external\Qt5\bin\uic.exe "%(FullPath)" -o "%(RootDir)%(Directory)ui\ui_%(Filename).h"</Command>
