stubbing out obj exporter

--- a/WhipLib/WhipLib.vcxproj
+++ b/WhipLib/WhipLib.vcxproj
@@ -269,6 +269,7 @@ exit 1</Command>
     <ClInclude Include="Logging.h" />
     <ClInclude Include="MathHelpers.h" />
     <ClInclude Include="NoclipComponent.h" />
+    <ClInclude Include="ObjExporter.h" />
     <ClInclude Include="PhysicsComponent.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
@@ -332,6 +333,7 @@ exit 1</Command>
     <ClCompile Include="Logging.cpp" />
     <ClCompile Include="MathHelpers.cpp" />
     <ClCompile Include="NoclipComponent.cpp" />
+    <ClCompile Include="ObjExporter.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Scene.cpp" />
